--- a/asm/692C.html
+++ b/asm/692C.html
@@ -137,10 +137,39 @@ Calculate the sprite data address from the frame ID.
 <td class="instruction">LD L,A</td>
 </tr>
 <tr>
+<td class="routine-comment" colspan="5">
+<span id="693b"></span>
+<div class="comments">
+<div class="paragraph">
+This is quite clever, and very subtle. It's probably easier here to show examples: <table class="default">
+<tr>
+<th colspan="1" rowspan="1">Input Value</th>
+<th colspan="1" rowspan="1">Output in <span class="register">HL</span></th>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">87</td>
+<td class="centre" colspan="1" rowspan="1"><a href="BE00.html#bf0e">BF0E</a></td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">C7</td>
+<td class="centre" colspan="1" rowspan="1"><a href="BE00.html#bf8e">BF8E</a></td>
+</tr>
+</table> From a quick glance, the following code looks pretty straight-forward, just a little strange: <span class="register">H</span>=(frame ID * 02) + BE - (frame ID * 02).
+</div>
+<div class="paragraph">
+The cleverness here is with the carry flag and the <code>ADC</code> instruction.
+</div>
+<div class="paragraph">
+When the multiplication of the frame ID passes 0100 the carry flag is set and this is included when adding the graphics high byte BE. The <code>SUB <span class="register">L</span></code> then removes the "frame ID * 02" part, leaving just BE + carry flag.
+</div>
+</div>
+</td>
+</tr>
+<tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="693b"></span>693B</td>
 <td class="instruction">ADC A,$BE</td>
-<td class="comment-1" rowspan="3">Load <span class="register">H</span> with the high byte for the graphics data: BE.</td>
+<td class="comment-1" rowspan="3">Load <span class="register">H</span> with the high byte for the graphics data: BE + the carry flag.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -250,18 +279,18 @@ Fetch the sprite data.
 <td class="asm-label"></td>
 <td class="address-1"><span id="6950"></span>6950</td>
 <td class="instruction">CP $10</td>
-<td class="comment-1" rowspan="2">Jump to <a href="692C.html#6959">DrawSpriteObject_2</a> if <span class="register">A</span> is higher than 10.</td>
+<td class="comment-1" rowspan="2">Jump to <a href="692C.html#6959">CheckNextFrame</a> if <span class="register">A</span> is higher than 10.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6952"></span>6952</td>
-<td class="instruction">JR NC,<a href="692C.html#6959">DrawSpriteObject_2</a></td>
+<td class="instruction">JR NC,<a href="692C.html#6959">CheckNextFrame</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6954"></span>6954</td>
 <td class="instruction">LD A,E</td>
-<td class="comment-1" rowspan="3">Jump to <a href="692C.html#696e">DrawSpriteObject_4</a> if <span class="register">E</span> is lower than 20.</td>
+<td class="comment-1" rowspan="3">Jump to <a href="692C.html#696e">DrawSpriteObject_3</a> if <span class="register">E</span> is lower than 20.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -271,10 +300,10 @@ Fetch the sprite data.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6957"></span>6957</td>
-<td class="instruction">JR C,<a href="692C.html#696e">DrawSpriteObject_4</a></td>
+<td class="instruction">JR C,<a href="692C.html#696e">DrawSpriteObject_3</a></td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_2</td>
+<td class="asm-label">CheckNextFrame</td>
 <td class="address-2"><span id="6959"></span>6959</td>
 <td class="instruction">LD HL,$0008</td>
 <td class="comment-1" rowspan="4"><span class="register">BC</span>+=0008.</td>
@@ -295,7 +324,7 @@ Fetch the sprite data.
 <td class="instruction">LD C,L</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_3</td>
+<td class="asm-label">DrawSpriteObject_2</td>
 <td class="address-2"><span id="695f"></span>695F</td>
 <td class="instruction">LD A,(BC)</td>
 <td class="comment-1" rowspan="1"><span class="register">A</span>=*<span class="register">BC</span>.</td>
@@ -367,7 +396,7 @@ We reached the terminator.
 <td class="comment-1" rowspan="1">Jump to <a href="68EC.html">68EC</a>.</td>
 </tr>
 <tr>
-<td class="asm-label">DrawSpriteObject_4</td>
+<td class="asm-label">DrawSpriteObject_3</td>
 <td class="address-2"><span id="696e"></span>696E</td>
 <td class="instruction">LD A,D</td>
 <td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">D</span>.</td>
@@ -434,19 +463,19 @@ We reached the terminator.
 <td class="asm-label"></td>
 <td class="address-1"><span id="697c"></span>697C</td>
 <td class="instruction">CALL <a href="68F6.html">DrawSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="68F6.html">DrawSprite</a>.</td>
+<td class="comment-1" rowspan="1">Call <a href="68F6.html">DrawSprite</a> to draw the top of the sprite.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="697f"></span>697F</td>
 <td class="instruction">INC H</td>
-<td class="comment-1" rowspan="1">Increment <span class="register">H</span> by one.</td>
+<td class="comment-1" rowspan="1">Move to the next screen row.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6980"></span>6980</td>
 <td class="instruction">CALL <a href="68F6.html">DrawSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="68F6.html">DrawSprite</a>.</td>
+<td class="comment-1" rowspan="1">Call <a href="68F6.html">DrawSprite</a> to draw the bottom of the sprite.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -457,14 +486,14 @@ We reached the terminator.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6986"></span>6986</td>
-<td class="instruction">JR <a href="692C.html#695f">DrawSpriteObject_3</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="692C.html#695f">DrawSpriteObject_3</a>.</td>
+<td class="instruction">JR <a href="692C.html#695f">DrawSpriteObject_2</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="692C.html#695f">DrawSpriteObject_2</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6988"></span>6988</td>
 <td class="instruction">LD ($7825),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="7825.html">7825</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="7825.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -482,13 +511,13 @@ We reached the terminator.
 <td class="asm-label"></td>
 <td class="address-1"><span id="698d"></span>698D</td>
 <td class="instruction">LD H,B</td>
-<td class="comment-1" rowspan="1"><span class="register">H</span>=<span class="register">B</span>.</td>
+<td class="comment-1" rowspan="1">Load the active sprite block count into <span class="register">H</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="698e"></span>698E</td>
 <td class="instruction">LD L,C</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=<span class="register">C</span>.</td>
+<td class="comment-1" rowspan="1">Load the attribute byte into <span class="register">L</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
