--- a/asm/6C00.html
+++ b/asm/6C00.html
@@ -41,7 +41,7 @@ Next: <a href="6CAA.html">6CAA</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="EBF3.html">EBF3</a> and <a href="EC00.html">EC00</a>.
+Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC00.html">FrameSyncCheck</a>.
 </div>
 </div>
 </td>
