--- a/asm/6CAA.html
+++ b/asm/6CAA.html
@@ -454,8 +454,8 @@ This entry point is used by the routine at <a href="6E18.html">6E18</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6d1b"></span>6D1B</td>
-<td class="instruction">JP <a href="EBF3.html#ebf6">$EBF6</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="EBF3.html#ebf6">EBF6</a>.</td>
+<td class="instruction">JP <a href="EBF3.html#ebf6">WaitForFrameChange</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="EBF3.html#ebf6">WaitForFrameChange</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
