--- a/asm/6D49.html
+++ b/asm/6D49.html
@@ -59,7 +59,7 @@ Used by the routines at <a href="6AAC.html">6AAC</a> and <a href="76D7.html">76D
 <tr>
 <td class="address-1"><span id="6d4d"></span>6D4D</td>
 <td class="instruction">LD ($785A),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="785A.html">785A</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="785A.html">FrameCount</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
@@ -159,8 +159,8 @@ This entry point is used by the routines at <a href="6C00.html">Game_Loop</a>, <
 </tr>
 <tr>
 <td class="address-1"><span id="6d6c"></span>6D6C</td>
-<td class="instruction">CALL <a href="EC00.html">$EC00</a></td>
-<td class="comment-1" rowspan="1">Call <a href="EC00.html">EC00</a>.</td>
+<td class="instruction">CALL <a href="EC00.html">FrameSyncCheck</a></td>
+<td class="comment-1" rowspan="1">Call <a href="EC00.html">FrameSyncCheck</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6d6f"></span>6D6F</td>
@@ -249,8 +249,8 @@ This entry point is used by the routines at <a href="6C00.html">Game_Loop</a>, <
 </tr>
 <tr>
 <td class="address-1"><span id="6d8b"></span>6D8B</td>
-<td class="instruction">CALL <a href="EC00.html">$EC00</a></td>
-<td class="comment-1" rowspan="1">Call <a href="EC00.html">EC00</a>.</td>
+<td class="instruction">CALL <a href="EC00.html">FrameSyncCheck</a></td>
+<td class="comment-1" rowspan="1">Call <a href="EC00.html">FrameSyncCheck</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6d8e"></span>6D8E</td>
