--- a/asm/7311.html
+++ b/asm/7311.html
@@ -284,7 +284,7 @@ This entry point is used by the routine at <a href="76D7.html">76D7</a>.
 <tr>
 <td class="address-1"><span id="7360"></span>7360</td>
 <td class="instruction">LD A,($7825)</td>
-<td class="comment-1" rowspan="3">Jump to <a href="7311.html#736c">736C</a> if *<a href="7825.html">7825</a> is not equal to 44.</td>
+<td class="comment-1" rowspan="3">Jump to <a href="7311.html#736c">736C</a> if *<a href="7825.html">SpriteState</a> is not equal to 44.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="7363"></span>7363</td>
