--- a/asm/783C.html
+++ b/asm/783C.html
@@ -31,7 +31,7 @@ Prev: <a href="783A.html">783A</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#783c">Map</a></td>
 <td class="next">
-Next: <a href="7840.html">7840</a>
+Next: <a href="783E.html">783E</a>
 </td>
 </tr>
 </table>
@@ -46,19 +46,7 @@ Next: <a href="7840.html">7840</a>
 <tr>
 <td class="asm-label">Fuel</td>
 <td class="address-1"><span id="783c"></span>783C</td>
-<td class="instruction">DEFB $00</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="783d"></span>783D</td>
-<td class="instruction">DEFB $01</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="783e"></span>783E</td>
-<td class="instruction">DEFB $00,$00</td>
+<td class="instruction">DEFW $0100</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
@@ -69,7 +57,7 @@ Prev: <a href="783A.html">783A</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#783c">Map</a></td>
 <td class="next">
-Next: <a href="7840.html">7840</a>
+Next: <a href="783E.html">783E</a>
 </td>
 </tr>
 </table>
