--- a/asm/783E.html
+++ b/asm/783E.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Text at 50144</title>
+<title>Wheelie: Game status buffer entry at 783E</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -17,25 +17,25 @@ gtag('js', new Date());
 gtag('config', 'G-75RERFCHBG');
 </script>
 </head>
-<body class="Asm-t">
+<body class="Asm-g">
 <table class="header">
 <tr>
 <td class="logo"><a href="../index.html"><img alt="logo" src="../images/logo.png" /></a></td>
-<td class="page-header">Messages</td>
+<td class="page-header">Game status buffer</td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="48640.html">48640</a>
+Prev: <a href="783C.html">783C</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#50144">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#783e">Map</a></td>
 <td class="next">
-Next: <a href="50148.html">50148</a>
+Next: <a href="7840.html">7840</a>
 </td>
 </tr>
 </table>
-<div class="description">50144: Messaging: MPH</div>
+<div class="description">783E: Game status buffer entry at 783E</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,20 +44,19 @@ Next: <a href="50148.html">50148</a>
 </td>
 </tr>
 <tr>
-<td class="asm-label">Messaging_MPH</td>
-<td class="address-1"><span id="50144"></span>50144</td>
-<td class="instruction">DEFM "MPH "</td>
-<td class="comment-1" rowspan="1">"MPH ".</td>
+<td class="address-1"><span id="783e"></span>783E</td>
+<td class="instruction">DEFB $00,$00</td>
+<td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="48640.html">48640</a>
+Prev: <a href="783C.html">783C</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#50144">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#783e">Map</a></td>
 <td class="next">
-Next: <a href="50148.html">50148</a>
+Next: <a href="7840.html">7840</a>
 </td>
 </tr>
 </table>
@@ -66,7 +65,7 @@ Next: <a href="50148.html">50148</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.6.</div>
 <div class="repository">Link to <a rel="noopener nofollow" href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../../asm/C3E0.html">Switch to hexadecimal</a>.</div>
+<div><a href="../dec/asm/30782.html">Switch to decimal</a>.</div>
 </footer>
 </body>
 </html>
