--- a/asm/7840.html
+++ b/asm/7840.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="783C.html">783C</a>
+Prev: <a href="783E.html">783E</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7840">Map</a></td>
 <td class="next">
@@ -52,7 +52,7 @@ Next: <a href="7841.html">7841</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="783C.html">783C</a>
+Prev: <a href="783E.html">783E</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7840">Map</a></td>
 <td class="next">
