--- a/asm/785A.html
+++ b/asm/785A.html
@@ -35,7 +35,7 @@ Next: <a href="785B.html">785B</a>
 </td>
 </tr>
 </table>
-<div class="description">785A: Game status buffer entry at 785A</div>
+<div class="description">785A: Frame Count</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,6 +44,7 @@ Next: <a href="785B.html">785B</a>
 </td>
 </tr>
 <tr>
+<td class="asm-label">FrameCount</td>
 <td class="address-1"><span id="785a"></span>785A</td>
 <td class="instruction">DEFB $04</td>
 <td class="comment-0" rowspan="1"></td>
