--- a/buffers/gbuffer.html
+++ b/buffers/gbuffer.html
@@ -155,7 +155,7 @@ See <a href="../asm/6414.html">SetRandomNumberSeed</a> for how this is generated
 <td class="map-g"><span id="7825"></span><a href="../asm/7825.html">7825</a></td>
 <td class="map-length">1</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/7825.html">Game status buffer entry at 7825</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/7825.html">Sprite State</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -288,9 +288,18 @@ See <a href="../asm/6414.html">SetRandomNumberSeed</a> for how this is generated
 </tr>
 <tr>
 <td class="map-g"><span id="783c"></span><a href="../asm/783C.html">783C</a></td>
-<td class="map-length">4</td>
+<td class="map-length">2</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/783C.html">Fuel</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="783e"></span><a href="../asm/783E.html">783E</a></td>
+<td class="map-length">2</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/783E.html">Game status buffer entry at 783E</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -383,7 +392,7 @@ Pointer to the routine which will handle retrieving the player controls.
 <td class="map-g"><span id="785a"></span><a href="../asm/785A.html">785A</a></td>
 <td class="map-length">1</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/785A.html">Game status buffer entry at 785A</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/785A.html">Frame Count</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -441,6 +450,15 @@ Pointer to the routine which will handle retrieving the player controls.
 <td class="map-length">64</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/B49C.html">Game status buffer entry at B49C</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="be00"></span><a href="../asm/BE00.html">BE00</a></td>
+<td class="map-length">1504</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/BE00.html">Game status buffer entry at BE00</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
