--- a/dec/asm/27648.html
+++ b/dec/asm/27648.html
@@ -41,7 +41,7 @@ Next: <a href="27818.html">27818</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="60403.html">60403</a> and <a href="60416.html">60416</a>.
+Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="60416.html">FrameSyncCheck</a>.
 </div>
 </div>
 </td>
