--- a/dec/asm/27818.html
+++ b/dec/asm/27818.html
@@ -454,8 +454,8 @@ This entry point is used by the routine at <a href="28184.html">28184</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27931"></span>27931</td>
-<td class="instruction">JP <a href="60403.html#60406">60406</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="60403.html#60406">60406</a>.</td>
+<td class="instruction">JP <a href="60403.html#60406">WaitForFrameChange</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="60403.html#60406">WaitForFrameChange</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
