--- a/dec/asm/27977.html
+++ b/dec/asm/27977.html
@@ -59,7 +59,7 @@ Used by the routines at <a href="27308.html">27308</a> and <a href="30423.html">
 <tr>
 <td class="address-1"><span id="27981"></span>27981</td>
 <td class="instruction">LD (30810),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30810.html">30810</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30810.html">FrameCount</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
@@ -159,8 +159,8 @@ This entry point is used by the routines at <a href="27648.html">Game_Loop</a>, 
 </tr>
 <tr>
 <td class="address-1"><span id="28012"></span>28012</td>
-<td class="instruction">CALL <a href="60416.html">60416</a></td>
-<td class="comment-1" rowspan="1">Call <a href="60416.html">60416</a>.</td>
+<td class="instruction">CALL <a href="60416.html">FrameSyncCheck</a></td>
+<td class="comment-1" rowspan="1">Call <a href="60416.html">FrameSyncCheck</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="28015"></span>28015</td>
@@ -249,8 +249,8 @@ This entry point is used by the routines at <a href="27648.html">Game_Loop</a>, 
 </tr>
 <tr>
 <td class="address-1"><span id="28043"></span>28043</td>
-<td class="instruction">CALL <a href="60416.html">60416</a></td>
-<td class="comment-1" rowspan="1">Call <a href="60416.html">60416</a>.</td>
+<td class="instruction">CALL <a href="60416.html">FrameSyncCheck</a></td>
+<td class="comment-1" rowspan="1">Call <a href="60416.html">FrameSyncCheck</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="28046"></span>28046</td>
