--- a/dec/asm/29457.html
+++ b/dec/asm/29457.html
@@ -284,7 +284,7 @@ This entry point is used by the routine at <a href="30423.html">30423</a>.
 <tr>
 <td class="address-1"><span id="29536"></span>29536</td>
 <td class="instruction">LD A,(30757)</td>
-<td class="comment-1" rowspan="3">Jump to <a href="29457.html#29548">29548</a> if *<a href="30757.html">30757</a> is not equal to 68.</td>
+<td class="comment-1" rowspan="3">Jump to <a href="29457.html#29548">29548</a> if *<a href="30757.html">SpriteState</a> is not equal to 68.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29539"></span>29539</td>
