--- a/dec/asm/30780.html
+++ b/dec/asm/30780.html
@@ -31,7 +31,7 @@ Prev: <a href="30778.html">30778</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30780">Map</a></td>
 <td class="next">
-Next: <a href="30784.html">30784</a>
+Next: <a href="30782.html">30782</a>
 </td>
 </tr>
 </table>
@@ -46,19 +46,7 @@ Next: <a href="30784.html">30784</a>
 <tr>
 <td class="asm-label">Fuel</td>
 <td class="address-1"><span id="30780"></span>30780</td>
-<td class="instruction">DEFB 0</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="30781"></span>30781</td>
-<td class="instruction">DEFB 1</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="asm-label"></td>
-<td class="address-1"><span id="30782"></span>30782</td>
-<td class="instruction">DEFB 0,0</td>
+<td class="instruction">DEFW 256</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
@@ -69,7 +57,7 @@ Prev: <a href="30778.html">30778</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30780">Map</a></td>
 <td class="next">
-Next: <a href="30784.html">30784</a>
+Next: <a href="30782.html">30782</a>
 </td>
 </tr>
 </table>
