--- a/dec/asm/30810.html
+++ b/dec/asm/30810.html
@@ -35,7 +35,7 @@ Next: <a href="30811.html">30811</a>
 </td>
 </tr>
 </table>
-<div class="description">30810: Game status buffer entry at 785A</div>
+<div class="description">30810: Frame Count</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,6 +44,7 @@ Next: <a href="30811.html">30811</a>
 </td>
 </tr>
 <tr>
+<td class="asm-label">FrameCount</td>
 <td class="address-1"><span id="30810"></span>30810</td>
 <td class="instruction">DEFB 4</td>
 <td class="comment-0" rowspan="1"></td>
