--- a/dec/asm/59469.html
+++ b/dec/asm/59469.html
@@ -49,7 +49,7 @@ Used by the routine at <a href="29379.html">29379</a>.
 <tr>
 <td class="address-2"><span id="59469"></span>59469</td>
 <td class="instruction">LD (30782),HL</td>
-<td class="comment-1" rowspan="1">Write <span class="register">HL</span> to *<a href="30780.html#30782">30782</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">HL</span> to *<a href="30782.html">30782</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="59472"></span>59472</td>
@@ -110,7 +110,7 @@ Used by the routine at <a href="29379.html">29379</a>.
 <tr>
 <td class="address-1"><span id="59495"></span>59495</td>
 <td class="instruction">LD A,(30781)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30780.html#30781">30781</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30780.html">30781</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="59498"></span>59498</td>
@@ -120,7 +120,7 @@ Used by the routine at <a href="29379.html">29379</a>.
 <tr>
 <td class="address-1"><span id="59500"></span>59500</td>
 <td class="instruction">LD (30781),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30780.html#30781">30781</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30780.html">30781</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="59503"></span>59503</td>
