--- a/dec/buffers/gbuffer.html
+++ b/dec/buffers/gbuffer.html
@@ -155,7 +155,7 @@ See <a href="../asm/25620.html">SetRandomNumberSeed</a> for how this is generate
 <td class="map-g"><span id="30757"></span><a href="../asm/30757.html">30757</a></td>
 <td class="map-length">1</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30757.html">Game status buffer entry at 7825</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30757.html">Sprite State</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -288,9 +288,18 @@ See <a href="../asm/25620.html">SetRandomNumberSeed</a> for how this is generate
 </tr>
 <tr>
 <td class="map-g"><span id="30780"></span><a href="../asm/30780.html">30780</a></td>
-<td class="map-length">4</td>
+<td class="map-length">2</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30780.html">Fuel</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="30782"></span><a href="../asm/30782.html">30782</a></td>
+<td class="map-length">2</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30782.html">Game status buffer entry at 783E</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -383,7 +392,7 @@ Pointer to the routine which will handle retrieving the player controls.
 <td class="map-g"><span id="30810"></span><a href="../asm/30810.html">30810</a></td>
 <td class="map-length">1</td>
 <td class="map-g-desc">
-<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30810.html">Game status buffer entry at 785A</a></div>
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/30810.html">Frame Count</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
@@ -441,6 +450,15 @@ Pointer to the routine which will handle retrieving the player controls.
 <td class="map-length">64</td>
 <td class="map-g-desc">
 <div class="map-entry-title-11"><a class="map-entry-title" href="../asm/46236.html">Game status buffer entry at B49C</a></div>
+<div class="map-entry-desc">
+</div>
+</td>
+</tr>
+<tr>
+<td class="map-g"><span id="48640"></span><a href="../asm/48640.html">48640</a></td>
+<td class="map-length">1504</td>
+<td class="map-g-desc">
+<div class="map-entry-title-11"><a class="map-entry-title" href="../asm/48640.html">Game status buffer entry at BE00</a></div>
 <div class="map-entry-desc">
 </div>
 </td>
