--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -1157,7 +1157,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">37</td>
 <td class="map-g"><span id="30757"></span><a href="../asm/30757.html">30757</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30757.html">Game status buffer entry at 7825</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30757.html">Sprite State</a></div>
 </td>
 </tr>
 <tr>
@@ -1298,6 +1298,14 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">62</td>
+<td class="map-g"><span id="30782"></span><a href="../asm/30782.html">30782</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30782.html">Game status buffer entry at 783E</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">64</td>
 <td class="map-g"><span id="30784"></span><a href="../asm/30784.html">30784</a></td>
 <td class="map-g-desc">
@@ -1373,7 +1381,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">90</td>
 <td class="map-g"><span id="30810"></span><a href="../asm/30810.html">30810</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30810.html">Game status buffer entry at 785A</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30810.html">Frame Count</a></div>
 </td>
 </tr>
 <tr>
@@ -1657,6 +1665,14 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">190</td>
+<td class="map-byte">0</td>
+<td class="map-g"><span id="48640"></span><a href="../asm/48640.html">48640</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/48640.html">Game status buffer entry at BE00</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">195</td>
 <td class="map-byte">224</td>
 <td class="map-t"><span id="50144"></span><a href="../asm/50144.html">50144</a></td>
@@ -1861,7 +1877,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">243</td>
 <td class="map-c"><span id="60403"></span><a href="../asm/60403.html">60403</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60403.html">Routine at EBF3</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60403.html">Frame Synchronisation</a></div>
 </td>
 </tr>
 <tr>
@@ -1877,7 +1893,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-c"><span id="60416"></span><a href="../asm/60416.html">60416</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60416.html">Routine at EC00</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60416.html">Frame Synchronisation Check</a></div>
 </td>
 </tr>
 <tr>
