--- a/dec/maps/routines.html
+++ b/dec/maps/routines.html
@@ -543,13 +543,13 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="60403"></span><a href="../asm/60403.html">60403</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60403.html">Routine at EBF3</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60403.html">Frame Synchronisation</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="60416"></span><a href="../asm/60416.html">60416</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60416.html">Routine at EC00</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60416.html">Frame Synchronisation Check</a></div>
 </td>
 </tr>
 <tr>
