--- a/maps/all.html
+++ b/maps/all.html
@@ -1157,7 +1157,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">37</td>
 <td class="map-g"><span id="7825"></span><a href="../asm/7825.html">7825</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7825.html">Game status buffer entry at 7825</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7825.html">Sprite State</a></div>
 </td>
 </tr>
 <tr>
@@ -1298,6 +1298,14 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">62</td>
+<td class="map-g"><span id="783e"></span><a href="../asm/783E.html">783E</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/783E.html">Game status buffer entry at 783E</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">64</td>
 <td class="map-g"><span id="7840"></span><a href="../asm/7840.html">7840</a></td>
 <td class="map-g-desc">
@@ -1373,7 +1381,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">90</td>
 <td class="map-g"><span id="785a"></span><a href="../asm/785A.html">785A</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/785A.html">Game status buffer entry at 785A</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/785A.html">Frame Count</a></div>
 </td>
 </tr>
 <tr>
@@ -1657,6 +1665,14 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">190</td>
+<td class="map-byte">0</td>
+<td class="map-g"><span id="be00"></span><a href="../asm/BE00.html">BE00</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/BE00.html">Game status buffer entry at BE00</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">195</td>
 <td class="map-byte">224</td>
 <td class="map-t"><span id="c3e0"></span><a href="../asm/C3E0.html">C3E0</a></td>
@@ -1861,7 +1877,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">243</td>
 <td class="map-c"><span id="ebf3"></span><a href="../asm/EBF3.html">EBF3</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EBF3.html">Routine at EBF3</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EBF3.html">Frame Synchronisation</a></div>
 </td>
 </tr>
 <tr>
@@ -1877,7 +1893,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">0</td>
 <td class="map-c"><span id="ec00"></span><a href="../asm/EC00.html">EC00</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC00.html">Routine at EC00</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC00.html">Frame Synchronisation Check</a></div>
 </td>
 </tr>
 <tr>
