--- a/maps/routines.html
+++ b/maps/routines.html
@@ -543,13 +543,13 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="ebf3"></span><a href="../asm/EBF3.html">EBF3</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EBF3.html">Routine at EBF3</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EBF3.html">Frame Synchronisation</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-c"><span id="ec00"></span><a href="../asm/EC00.html">EC00</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC00.html">Routine at EC00</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC00.html">Frame Synchronisation Check</a></div>
 </td>
 </tr>
 <tr>
