--- a/asm/73F2.html
+++ b/asm/73F2.html
@@ -49,7 +49,7 @@ Used by the routine at <a href="691B.html">ColouriseSprite</a>.
 <tr>
 <td class="address-2"><span id="73f2"></span>73F2</td>
 <td class="instruction">LD A,($7825)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7825.html">7825</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7825.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="73f5"></span>73F5</td>
@@ -192,7 +192,7 @@ Used by the routine at <a href="691B.html">ColouriseSprite</a>.
 <tr>
 <td class="address-1"><span id="7419"></span>7419</td>
 <td class="instruction">LD ($7825),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="7825.html">7825</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="7825.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="741c"></span>741C</td>
