--- a/asm/7825.html
+++ b/asm/7825.html
@@ -35,7 +35,7 @@ Next: <a href="7826.html">7826</a>
 </td>
 </tr>
 </table>
-<div class="description">7825: Game status buffer entry at 7825</div>
+<div class="description">7825: Sprite State</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,6 +44,7 @@ Next: <a href="7826.html">7826</a>
 </td>
 </tr>
 <tr>
+<td class="asm-label">SpriteState</td>
 <td class="address-1"><span id="7825"></span>7825</td>
 <td class="instruction">DEFB $00</td>
 <td class="comment-0" rowspan="1"></td>
