--- a/asm/C3E0.html
+++ b/asm/C3E0.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="BDB8.html">BDB8</a>
+Prev: <a href="BE00.html">BE00</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#c3e0">Map</a></td>
 <td class="next">
@@ -53,7 +53,7 @@ Next: <a href="C3E4.html">C3E4</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="BDB8.html">BDB8</a>
+Prev: <a href="BE00.html">BE00</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#c3e0">Map</a></td>
 <td class="next">
