--- a/asm/E84D.html
+++ b/asm/E84D.html
@@ -49,7 +49,7 @@ Used by the routine at <a href="72C3.html">72C3</a>.
 <tr>
 <td class="address-2"><span id="e84d"></span>E84D</td>
 <td class="instruction">LD ($783E),HL</td>
-<td class="comment-1" rowspan="1">Write <span class="register">HL</span> to *<a href="783C.html#783e">783E</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">HL</span> to *<a href="783E.html">783E</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="e850"></span>E850</td>
@@ -110,7 +110,7 @@ Used by the routine at <a href="72C3.html">72C3</a>.
 <tr>
 <td class="address-1"><span id="e867"></span>E867</td>
 <td class="instruction">LD A,($783D)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="783C.html#783d">783D</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="783C.html">783D</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="e86a"></span>E86A</td>
@@ -120,7 +120,7 @@ Used by the routine at <a href="72C3.html">72C3</a>.
 <tr>
 <td class="address-1"><span id="e86c"></span>E86C</td>
 <td class="instruction">LD ($783D),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="783C.html#783d">783D</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="783C.html">783D</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="e86f"></span>E86F</td>
