--- a/asm/EBF3.html
+++ b/asm/EBF3.html
@@ -35,7 +35,7 @@ Next: <a href="EBFF.html">EBFF</a>
 </td>
 </tr>
 </table>
-<div class="description">EBF3: Routine at EBF3</div>
+<div class="description">EBF3: Frame Synchronisation</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -47,9 +47,10 @@ Used by the routine at <a href="763C.html">Handler_Fuel</a>.
 </td>
 </tr>
 <tr>
+<td class="asm-label">WaitForNextFrame</td>
 <td class="address-2"><span id="ebf3"></span>EBF3</td>
 <td class="instruction">LD A,($785A)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="785A.html">785A</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="785A.html">FrameCount</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
@@ -62,20 +63,34 @@ This entry point is used by the routine at <a href="6CAA.html">GameInitialisatio
 </td>
 </tr>
 <tr>
+<td class="asm-label">WaitForFrameChange</td>
 <td class="address-2"><span id="ebf6"></span>EBF6</td>
 <td class="instruction">LD HL,$5C78</td>
 <td class="comment-1" rowspan="1"><span class="register">HL</span>=<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C78.html">FRAMES</a>.</td>
 </tr>
 <tr>
+<td class="routine-comment" colspan="5">
+<span id="ebf9"></span>
+<div class="comments">
+<div class="paragraph">
+Wait loop, hold further execution until the frame counter changes to the stored value.
+</div>
+</div>
+</td>
+</tr>
+<tr>
+<td class="asm-label">FrameSyncLoop</td>
 <td class="address-2"><span id="ebf9"></span>EBF9</td>
 <td class="instruction">CP (HL)</td>
-<td class="comment-1" rowspan="2">Jump to <a href="EBF3.html#ebf9">EBF9</a> if <span class="register">A</span> is not equal to *<span class="register">HL</span>.</td>
+<td class="comment-1" rowspan="2">Keep jumping back to <a href="EBF3.html#ebf9">FrameSyncLoop</a> until <a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C78.html">FRAMES</a> matches *<a href="785A.html">FrameCount</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="ebfa"></span>EBFA</td>
-<td class="instruction">JR NZ,<a href="EBF3.html#ebf9">$EBF9</a></td>
+<td class="instruction">JR NZ,<a href="EBF3.html#ebf9">FrameSyncLoop</a></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="ebfc"></span>EBFC</td>
 <td class="instruction">JP <a href="6C00.html">Game_Loop</a></td>
 <td class="comment-1" rowspan="1">Jump to <a href="6C00.html">Game_Loop</a>.</td>
