--- a/dec/asm/29682.html
+++ b/dec/asm/29682.html
@@ -49,7 +49,7 @@ Used by the routine at <a href="26907.html">ColouriseSprite</a>.
 <tr>
 <td class="address-2"><span id="29682"></span>29682</td>
 <td class="instruction">LD A,(30757)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30757.html">30757</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30757.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29685"></span>29685</td>
@@ -192,7 +192,7 @@ Used by the routine at <a href="26907.html">ColouriseSprite</a>.
 <tr>
 <td class="address-1"><span id="29721"></span>29721</td>
 <td class="instruction">LD (30757),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30757.html">30757</a>.</td>
+<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30757.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29724"></span>29724</td>
