--- a/dec/asm/30268.html
+++ b/dec/asm/30268.html
@@ -102,23 +102,23 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <td class="asm-label"></td>
 <td class="address-1"><span id="30286"></span>30286</td>
 <td class="instruction">CP 49</td>
-<td class="comment-1" rowspan="2">Call <a href="60403.html">60403</a> if <span class="register">A</span> is higher than 49.</td>
+<td class="comment-1" rowspan="2">Call <a href="60403.html">WaitForNextFrame</a> if <span class="register">A</span> is higher than 49.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30288"></span>30288</td>
-<td class="instruction">CALL NC,<a href="60403.html">60403</a></td>
+<td class="instruction">CALL NC,<a href="60403.html">WaitForNextFrame</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30291"></span>30291</td>
 <td class="instruction">CP 45</td>
-<td class="comment-1" rowspan="2">Call <a href="60403.html">60403</a> if <span class="register">A</span> is lower than 45.</td>
+<td class="comment-1" rowspan="2">Call <a href="60403.html">WaitForNextFrame</a> if <span class="register">A</span> is lower than 45.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30293"></span>30293</td>
-<td class="instruction">CALL C,<a href="60403.html">60403</a></td>
+<td class="instruction">CALL C,<a href="60403.html">WaitForNextFrame</a></td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -563,8 +563,8 @@ Handle fuel-related audio effects during gameplay.
 <tr>
 <td class="asm-label">Handler_Fuel_0</td>
 <td class="address-2"><span id="30416"></span>30416</td>
-<td class="instruction">JP <a href="60403.html">60403</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="60403.html">60403</a>.</td>
+<td class="instruction">JP <a href="60403.html">WaitForNextFrame</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="60403.html">WaitForNextFrame</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
