--- a/dec/asm/30423.html
+++ b/dec/asm/30423.html
@@ -56,7 +56,7 @@ Used by the routines at <a href="29038.html">29038</a> and <a href="29457.html">
 <td class="asm-label"></td>
 <td class="address-1"><span id="30426"></span>30426</td>
 <td class="instruction">LD A,(30757)</td>
-<td class="comment-1" rowspan="3">Return if *<a href="30757.html">30757</a> is zero.</td>
+<td class="comment-1" rowspan="3">Return if *<a href="30757.html">SpriteState</a> is zero.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -72,7 +72,7 @@ Used by the routines at <a href="29038.html">29038</a> and <a href="29457.html">
 <td class="asm-label"></td>
 <td class="address-1"><span id="30431"></span>30431</td>
 <td class="instruction">XOR A</td>
-<td class="comment-1" rowspan="2">Write 0 to *<a href="30757.html">30757</a>.</td>
+<td class="comment-1" rowspan="2">Write 0 to *<a href="30757.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -416,7 +416,7 @@ FLASH: ON).</td>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30540"></span>30540</td>
 <td class="instruction">LD HL,(30782)</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="30780.html#30782">30782</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">HL</span>=*<a href="30782.html">30782</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -798,13 +798,12 @@ This entry point is used by the routine at <a href="60458.html">60458</a>.
 <td class="asm-label"></td>
 <td class="address-1"><span id="30652"></span>30652</td>
 <td class="instruction">LD HL,30777</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=<a href="30777.html">Lives</a>.</td>
+<td class="comment-1" rowspan="2">Write 5 to *<a href="30777.html">Lives</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30655"></span>30655</td>
 <td class="instruction">LD (HL),5</td>
-<td class="comment-1" rowspan="1">Write 5 to *<span class="register">HL</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
