--- a/dec/asm/30757.html
+++ b/dec/asm/30757.html
@@ -35,7 +35,7 @@ Next: <a href="30758.html">30758</a>
 </td>
 </tr>
 </table>
-<div class="description">30757: Game status buffer entry at 7825</div>
+<div class="description">30757: Sprite State</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,6 +44,7 @@ Next: <a href="30758.html">30758</a>
 </td>
 </tr>
 <tr>
+<td class="asm-label">SpriteState</td>
 <td class="address-1"><span id="30757"></span>30757</td>
 <td class="instruction">DEFB 0</td>
 <td class="comment-0" rowspan="1"></td>
