--- a/dec/asm/60416.html
+++ b/dec/asm/60416.html
@@ -35,61 +35,68 @@ Next: <a href="60431.html">60431</a>
 </td>
 </tr>
 </table>
-<div class="description">60416: Routine at EC00</div>
+<div class="description">60416: Frame Synchronisation Check</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="27977.html">27977</a>.
+Check if this is a new video frame and jump to the game loop if it is.
 </div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">FrameSyncCheck</td>
 <td class="address-2"><span id="60416"></span>60416</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch to the shadow registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60417"></span>60417</td>
 <td class="instruction">LD C,A</td>
-<td class="comment-1" rowspan="1"><span class="register">C'</span>=<span class="register">A</span>.</td>
+<td class="comment-1" rowspan="1">Save the <span class="register">A</span> register to <span class="register">C'</span> temporarily.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60418"></span>60418</td>
 <td class="instruction">LD A,(30810)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30810.html">30810</a>.</td>
+<td class="comment-1" rowspan="3">Compare *<a href="30810.html">FrameCount</a> to <a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C78.html">FRAMES</a> .</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60421"></span>60421</td>
 <td class="instruction">LD HL,23672</td>
-<td class="comment-1" rowspan="1"><span class="register">HL'</span>=<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C78.html">FRAMES</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60424"></span>60424</td>
 <td class="instruction">CP (HL)</td>
-<td class="comment-1" rowspan="1">Compare <span class="register">A</span> with *<span class="register">HL'</span>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60425"></span>60425</td>
 <td class="instruction">LD A,C</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">C'</span>.</td>
+<td class="comment-1" rowspan="1">Restore <span class="register">A</span> back to its original value.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60426"></span>60426</td>
 <td class="instruction">EXX</td>
 <td class="comment-1" rowspan="1">Switch back to the normal registers.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60427"></span>60427</td>
 <td class="instruction">RET NZ</td>
-<td class="comment-1" rowspan="1">Return if <span class="register">A</span> was not equal to *<span class="register">HL'</span> on line <a href="60416.html#60424">60424</a>.</td>
+<td class="comment-1" rowspan="1">Return if this is still the same frame.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60428"></span>60428</td>
 <td class="instruction">JP <a href="27648.html">Game_Loop</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="27648.html">Game_Loop</a>.</td>
+<td class="comment-1" rowspan="1">Jump to <a href="27648.html">Game_Loop</a> if a new frame has started.</td>
 </tr>
 </table>
 <table class="asm-navigation">
