--- a/dec/asm/60526.html
+++ b/dec/asm/60526.html
@@ -47,63 +47,85 @@ Used by the routine at <a href="60587.html">CheckPassword</a>.
 </td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-2"><span id="60526"></span>60526</td>
 <td class="instruction">LD (IY+7),0</td>
 <td class="comment-1" rowspan="1">Write 0 (cursor type "C", "K" or "L") to *<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C41.html">MODE</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60530"></span>60530</td>
 <td class="instruction">SET 3,(IY+48)</td>
 <td class="comment-1" rowspan="1">Set CAPS LOCK on, using bit 3 of *<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C6A.html">FLAGS2</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60534"></span>60534</td>
 <td class="instruction">LD HL,23611</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>=<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C3B.html">FLAGS</a>.</td>
+<td class="comment-1" rowspan="2">Reset bit 5 of *<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C3B.html">FLAGS</a> which resets "when a new key has been pressed".</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60537"></span>60537</td>
 <td class="instruction">RES 5,(HL)</td>
-<td class="comment-1" rowspan="1">Reset bit 5 of *<a href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C3B.html">FLAGS</a> which resets "when a new key has been pressed".</td>
 </tr>
 <tr>
+<td class="asm-label">PlayerInput_Loop</td>
 <td class="address-2"><span id="60539"></span>60539</td>
 <td class="instruction">BIT 5,(HL)</td>
-<td class="comment-1" rowspan="2">Jump to <a href="60526.html#60539">60539</a> if no key was pressed.</td>
+<td class="comment-1" rowspan="2">Keep jumping back to <a href="60526.html#60539">PlayerInput_Loop</a> until a key was pressed.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60541"></span>60541</td>
-<td class="instruction">JR Z,<a href="60526.html#60539">60539</a></td>
+<td class="instruction">JR Z,<a href="60526.html#60539">PlayerInput_Loop</a></td>
 </tr>
 <tr>
+<td class="routine-comment" colspan="5">
+<span id="60543"></span>
+<div class="comments">
+<div class="paragraph">
+Check which key was pressed.
+</div>
+</div>
+</td>
+</tr>
+<tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60543"></span>60543</td>
 <td class="instruction">LD A,(23560)</td>
 <td class="comment-1" rowspan="1"><span class="register">A</span>=<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C08.html">*LAST_K</a>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60546"></span>60546</td>
 <td class="instruction">CP 128</td>
-<td class="comment-1" rowspan="2">Jump to 60527 if <span class="register">A</span> is higher than 128.</td>
+<td class="comment-1" rowspan="2">Jump to 60527 if the ASCII value of the pressed key is 128 or higher (anything higher is invalid).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60548"></span>60548</td>
 <td class="instruction">JR NC,60527</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60550"></span>60550</td>
 <td class="instruction">CP 96</td>
-<td class="comment-1" rowspan="2">Return if <span class="register">A</span> is lower than 96.</td>
+<td class="comment-1" rowspan="2">Return if the ASCII value is 96 or lower.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60552"></span>60552</td>
 <td class="instruction">RET C</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60553"></span>60553</td>
 <td class="instruction">RES 5,A</td>
 <td class="comment-1" rowspan="1">Reset bit 5 of <span class="register">A</span>.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="60555"></span>60555</td>
 <td class="instruction">RET</td>
 <td class="comment-1" rowspan="1">Return.</td>
